--- a/src/pages/OnboardingFlow/style.module.css
+++ b/src/pages/OnboardingFlow/style.module.css
@@ -26,11 +26,11 @@
 
 .container {
     font-family: Manrope;
-    @apply w-full min-h-screen bg-white  ;
+    @apply w-full min-h-screen pb-12 bg-white  ;
 }
 
 .containerWrapper {
-    @apply w-full h-full  ;
+    @apply w-full h-auto pb-12  ;
 }
 
 .stage1Cont {
@@ -38,7 +38,7 @@
     /*animation-delay: 150ms;*/
     opacity: 1;
     width: 100%;
-    height: 100%;
+    height: auto;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -57,22 +57,22 @@
 .welcomeCont {
     animation: load 0.5s forwards;
     animation-delay: 0.5s;
-    @apply w-full h-auto flex flex-col items-center gap-3 pt-10 opacity-100 ;
+    @apply w-full h-auto flex flex-col items-center gap-3 pt-10 pb-12 opacity-100 ;
 }
 
 .welcomeContEnd {
     animation: disappear 0.25s forwards;
     opacity: 1;
-    @apply w-full h-auto flex flex-col items-center gap-3 pt-10 ;
+    @apply w-full h-screen flex flex-col items-center gap-3 pt-10 pb-12 ;
 }
 
 .chooseMapCont {
     animation: load 0.25s forwards;
     /*animation-delay: 1s;*/
-    @apply w-full h-auto flex flex-col items-center gap-3 pt-10 opacity-100 ;
+    @apply w-full h-auto flex flex-col items-center gap-3 pt-10 pb-12 opacity-100 ;
 }
 
 .chooseMapWrapper {
     animation: load 0.25s forwards;
-    @apply w-full h-full min-h-screen py-4 flex flex-col justify-between ;
+    @apply w-full h-full min-h-screen pt-4 pb-12 flex flex-col justify-between ;
 }
